// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PricingCard with basic theme applied OldPricingCard renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "white",
        "borderColor": "#e1e8ee",
        "borderWidth": 1,
        "margin": 15,
        "marginBottom": 15,
        "padding": 15,
        "shadowColor": "rgba(0,0,0, .2)",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.5,
        "shadowRadius": 0.5,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {},
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          Array [
            Object {
              "color": "#9E9E9E",
              "fontSize": 37.5,
              "fontWeight": "800",
              "textAlign": "center",
            },
            Object {
              "color": "#9E9E9E",
            },
            undefined,
          ],
        ]
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {},
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          Array [
            Object {
              "fontSize": 50,
              "fontWeight": "700",
              "marginBottom": 10,
              "marginTop": 10,
              "textAlign": "center",
            },
            undefined,
          ],
        ]
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {},
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          Array [
            Object {
              "color": "#86939e",
              "fontWeight": "600",
              "marginBottom": 5,
              "marginTop": 5,
              "textAlign": "center",
            },
            undefined,
          ],
        ]
      }
    >
      1 User
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {},
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          Array [
            Object {
              "color": "#86939e",
              "fontWeight": "600",
              "marginBottom": 5,
              "marginTop": 5,
              "textAlign": "center",
            },
            undefined,
          ],
        ]
      }
    >
      Basic Support
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {},
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          Array [
            Object {
              "color": "#86939e",
              "fontWeight": "600",
              "marginBottom": 5,
              "marginTop": 5,
              "textAlign": "center",
            },
            undefined,
          ],
        ]
      }
    >
      All Core Features
    </Text>
    <View
      style={
        Array [
          Object {
            "marginLeft": 15,
            "marginRight": 15,
          },
          undefined,
          undefined,
          undefined,
        ]
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            undefined,
          ]
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          pointerEvents="box-only"
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#9E9E9E",
                "flexDirection": "row",
                "justifyContent": "center",
                "padding": 19,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              Object {
                "padding": 12,
              },
              undefined,
              undefined,
              undefined,
              Array [
                Object {
                  "marginBottom": 10,
                  "marginTop": 15,
                },
                undefined,
                Object {
                  "backgroundColor": "#9E9E9E",
                },
              ],
              undefined,
              undefined,
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "white",
                  "fontSize": 18,
                },
                Array [
                  Object {
                    "marginRight": 10,
                  },
                  undefined,
                ],
                Object {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
              ]
            }
          >
            
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {},
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                Array [
                  Object {
                    "color": "white",
                    "fontSize": 20,
                  },
                  undefined,
                  Object {
                    "fontSize": 17.5,
                  },
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                ],
              ]
            }
          >
            GET STARTED
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`PricingCard with basic theme applied PricingCard renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "white",
        "borderColor": "#e1e8ee",
        "borderWidth": 1,
        "margin": 15,
        "marginBottom": 15,
        "padding": 15,
        "shadowColor": "rgba(0,0,0, .2)",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.5,
        "shadowRadius": 0.5,
      },
      Object {
        "backgroundColor": "red",
      },
    ]
  }
  textStyle={undefined}
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {},
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          Array [
            Object {
              "color": "#9E9E9E",
              "fontSize": 37.5,
              "fontWeight": "800",
              "textAlign": "center",
            },
            Object {
              "color": "#9E9E9E",
            },
            undefined,
          ],
        ]
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {},
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          Array [
            Object {
              "fontSize": 50,
              "fontWeight": "700",
              "marginBottom": 10,
              "marginTop": 10,
              "textAlign": "center",
            },
            undefined,
          ],
        ]
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {},
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          Array [
            Object {
              "color": "#86939e",
              "fontWeight": "600",
              "marginBottom": 5,
              "marginTop": 5,
              "textAlign": "center",
            },
            undefined,
          ],
        ]
      }
    >
      1 User
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {},
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          Array [
            Object {
              "color": "#86939e",
              "fontWeight": "600",
              "marginBottom": 5,
              "marginTop": 5,
              "textAlign": "center",
            },
            undefined,
          ],
        ]
      }
    >
      Basic Support
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {},
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          Array [
            Object {
              "color": "#86939e",
              "fontWeight": "600",
              "marginBottom": 5,
              "marginTop": 5,
              "textAlign": "center",
            },
            undefined,
          ],
        ]
      }
    >
      All Core Features
    </Text>
    <View
      style={
        Array [
          Object {
            "marginLeft": 15,
            "marginRight": 15,
          },
          undefined,
          undefined,
          undefined,
        ]
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            undefined,
          ]
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          pointerEvents="box-only"
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#9E9E9E",
                "flexDirection": "row",
                "justifyContent": "center",
                "padding": 19,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              Object {
                "padding": 12,
              },
              undefined,
              undefined,
              undefined,
              Array [
                Object {
                  "marginBottom": 10,
                  "marginTop": 15,
                },
                undefined,
                Object {
                  "backgroundColor": "#9E9E9E",
                },
              ],
              undefined,
              undefined,
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "white",
                  "fontSize": 18,
                },
                Array [
                  Object {
                    "marginRight": 10,
                  },
                  undefined,
                ],
                Object {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
              ]
            }
          >
            
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {},
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                Array [
                  Object {
                    "color": "white",
                    "fontSize": 20,
                  },
                  undefined,
                  Object {
                    "fontSize": 17.5,
                  },
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                ],
              ]
            }
          >
            GET STARTED
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`PricingCard with no theme applied OldPricingCard and PricingCard returns the same thing if no theme is applied 1`] = `
"[32m- Expected[39m
[31m+ Received[39m

[2m  <View[22m
[2m    style={[22m
[2m      Array [[22m
[2m        Object {[22m
[2m          \\"backgroundColor\\": \\"white\\",[22m
[2m          \\"borderColor\\": \\"#e1e8ee\\",[22m
[2m          \\"borderWidth\\": 1,[22m
[2m          \\"margin\\": 15,[22m
[2m          \\"marginBottom\\": 15,[22m
[2m          \\"padding\\": 15,[22m
[2m          \\"shadowColor\\": \\"rgba(0,0,0, .2)\\",[22m
[2m          \\"shadowOffset\\": Object {[22m
[2m            \\"height\\": 1,[22m
[2m            \\"width\\": 0,[22m
[2m          },[22m
[2m          \\"shadowOpacity\\": 0.5,[22m
[2m          \\"shadowRadius\\": 0.5,[22m
[2m        },[22m
[2m        undefined,[22m
[2m      ][22m
[2m    }[22m
[32m-   textStyle={undefined}[39m
[2m  >[22m
[2m    <View[22m
[2m      style={[22m
[2m        Array [[22m
[2m          Object {[22m
[2m            \\"backgroundColor\\": \\"transparent\\",[22m
[2m          },[22m
[2m          undefined,[22m
[2m        ][22m
[2m      }[22m
[2m    >[22m
[2m      <Text[22m
[2m        accessible={true}[22m
[2m        allowFontScaling={true}[22m
[2m        ellipsizeMode=\\"tail\\"[22m
[2m        style={[22m
[2m          Array [[22m
[2m            Object {},[22m
[2m            undefined,[22m
[2m            undefined,[22m
[2m            undefined,[22m
[2m            undefined,[22m
[2m            undefined,[22m
[2m            undefined,[22m
[2m            undefined,[22m
[2m            undefined,[22m
[2m            undefined,[22m
[2m            Array [[22m
[2m              Object {[22m
[2m                \\"color\\": \\"#9E9E9E\\",[22m
[2m                \\"fontSize\\": 37.5,[22m
[2m                \\"fontWeight\\": \\"800\\",[22m
[2m                \\"textAlign\\": \\"center\\",[22m
[2m              },[22m
[2m              Object {[22m
[2m                \\"color\\": \\"#9E9E9E\\",[22m
[2m              },[22m
[2m              undefined,[22m
[2m            ],[22m
[2m          ][22m
[2m        }[22m
[2m      />[22m
[2m      <Text[22m
[2m        accessible={true}[22m
[2m        allowFontScaling={true}[22m
[2m        ellipsizeMode=\\"tail\\"[22m
[2m        style={[22m
[2m          Array [[22m
[2m            Object {},[22m
[2m            undefined,[22m
[2m            undefined,[22m
[2m            undefined,[22m
[2m            undefined,[22m
[2m            undefined,[22m
[2m            undefined,[22m
[2m            undefined,[22m
[2m            undefined,[22m
[2m            undefined,[22m
[2m            Array [[22m
[2m              Object {[22m
[2m                \\"fontSize\\": 50,[22m
[2m                \\"fontWeight\\": \\"700\\",[22m
[2m                \\"marginBottom\\": 10,[22m
[2m                \\"marginTop\\": 10,[22m
[2m                \\"textAlign\\": \\"center\\",[22m
[2m              },[22m
[2m              undefined,[22m
[2m            ],[22m
[2m          ][22m
[2m        }[22m
[2m      />[22m
[2m      <Text[22m
[2m        accessible={true}[22m
[2m        allowFontScaling={true}[22m
[2m        ellipsizeMode=\\"tail\\"[22m
[2m        style={[22m
[2m          Array [[22m
[2m            Object {},[22m
[2m            undefined,[22m
[2m            undefined,[22m
[2m            undefined,[22m
[2m            undefined,[22m
[2m            undefined,[22m
[2m            undefined,[22m
[2m            undefined,[22m
[2m            undefined,[22m
[2m            undefined,[22m
[2m            Array [[22m
[2m              Object {[22m
[2m                \\"color\\": \\"#86939e\\",[22m
[2m                \\"fontWeight\\": \\"600\\",[22m
[2m                \\"marginBottom\\": 5,[22m
[2m                \\"marginTop\\": 5,[22m
[2m                \\"textAlign\\": \\"center\\",[22m
[2m              },[22m
[2m              undefined,[22m
[2m            ],[22m
[2m          ][22m
[2m        }[22m
[2m      >[22m
[2m        1 User[22m
[2m      </Text>[22m
[2m      <Text[22m
[2m        accessible={true}[22m
[2m        allowFontScaling={true}[22m
[2m        ellipsizeMode=\\"tail\\"[22m
[2m        style={[22m
[2m          Array [[22m
[2m            Object {},[22m
[2m            undefined,[22m
[2m            undefined,[22m
[2m            undefined,[22m
[2m            undefined,[22m
[2m            undefined,[22m
[2m            undefined,[22m
[2m            undefined,[22m
[2m            undefined,[22m
[2m            undefined,[22m
[2m            Array [[22m
[2m              Object {[22m
[2m                \\"color\\": \\"#86939e\\",[22m
[2m                \\"fontWeight\\": \\"600\\",[22m
[2m                \\"marginBottom\\": 5,[22m
[2m                \\"marginTop\\": 5,[22m
[2m                \\"textAlign\\": \\"center\\",[22m
[2m              },[22m
[2m              undefined,[22m
[2m            ],[22m
[2m          ][22m
[2m        }[22m
[2m      >[22m
[2m        Basic Support[22m
[2m      </Text>[22m
[2m      <Text[22m
[2m        accessible={true}[22m
[2m        allowFontScaling={true}[22m
[2m        ellipsizeMode=\\"tail\\"[22m
[2m        style={[22m
[2m          Array [[22m
[2m            Object {},[22m
[2m            undefined,[22m
[2m            undefined,[22m
[2m            undefined,[22m
[2m            undefined,[22m
[2m            undefined,[22m
[2m            undefined,[22m
[2m            undefined,[22m
[2m            undefined,[22m
[2m            undefined,[22m
[2m            Array [[22m
[2m              Object {[22m
[2m                \\"color\\": \\"#86939e\\",[22m
[2m                \\"fontWeight\\": \\"600\\",[22m
[2m                \\"marginBottom\\": 5,[22m
[2m                \\"marginTop\\": 5,[22m
[2m                \\"textAlign\\": \\"center\\",[22m
[2m              },[22m
[2m              undefined,[22m
[2m            ],[22m
[2m          ][22m
[2m        }[22m
[2m      >[22m
[2m        All Core Features[22m
[2m      </Text>[22m
[2m      <View[22m
[2m        style={[22m
[2m          Array [[22m
[2m            Object {[22m
[2m              \\"marginLeft\\": 15,[22m
[2m              \\"marginRight\\": 15,[22m
[2m            },[22m
[2m            undefined,[22m
[2m            undefined,[22m
[2m            undefined,[22m
[2m          ][22m
[2m        }[22m
[2m      >[22m
[2m        <View[22m
[2m          accessibilityComponentType={undefined}[22m
[2m          accessibilityLabel={undefined}[22m
[2m          accessibilityTraits={undefined}[22m
[2m          accessible={true}[22m
[2m          hasTVPreferredFocus={undefined}[22m
[2m          hitSlop={undefined}[22m
[2m          isTVSelectable={true}[22m
[2m          nativeID={undefined}[22m
[2m          onLayout={undefined}[22m
[2m          onResponderGrant={[Function bound touchableHandleResponderGrant]}[22m
[2m          onResponderMove={[Function bound touchableHandleResponderMove]}[22m
[2m          onResponderRelease={[Function bound touchableHandleResponderRelease]}[22m
[2m          onResponderTerminate={[Function bound touchableHandleResponderTerminate]}[22m
[2m          onResponderTerminationRequest={[Function bound touchableHandleResponderTerminationRequest]}[22m
[2m          onStartShouldSetResponder={[Function bound touchableHandleStartShouldSetResponder]}[22m
[2m          style={[22m
[2m            Array [[22m
[2m              Object {[22m
[2m                \\"backgroundColor\\": \\"transparent\\",[22m
[2m              },[22m
[2m              undefined,[22m
[2m            ][22m
[2m          }[22m
[2m          testID={undefined}[22m
[2m          tvParallaxProperties={undefined}[22m
[2m        >[22m
[2m          <View[22m
[2m            pointerEvents=\\"box-only\\"[22m
[2m            style={[22m
[2m              Array [[22m
[2m                Object {[22m
[2m                  \\"alignItems\\": \\"center\\",[22m
[2m                  \\"backgroundColor\\": \\"#9E9E9E\\",[22m
[2m                  \\"flexDirection\\": \\"row\\",[22m
[2m                  \\"justifyContent\\": \\"center\\",[22m
[2m                  \\"padding\\": 19,[22m
[2m                },[22m
[2m                undefined,[22m
[2m                undefined,[22m
[2m                undefined,[22m
[2m                undefined,[22m
[2m                undefined,[22m
[2m                undefined,[22m
[2m                undefined,[22m
[2m                Object {[22m
[2m                  \\"padding\\": 12,[22m
[2m                },[22m
[2m                undefined,[22m
[2m                undefined,[22m
[2m                undefined,[22m
[2m                Array [[22m
[2m                  Object {[22m
[2m                    \\"marginBottom\\": 10,[22m
[2m                    \\"marginTop\\": 15,[22m
[2m                  },[22m
[2m                  undefined,[22m
[2m                  Object {[22m
[2m                    \\"backgroundColor\\": \\"#9E9E9E\\",[22m
[2m                  },[22m
[2m                ],[22m
[2m                undefined,[22m
[2m                undefined,[22m
[2m              ][22m
[2m            }[22m
[2m          >[22m
[2m            <Text[22m
[2m              accessible={true}[22m
[2m              allowFontScaling={false}[22m
[2m              ellipsizeMode=\\"tail\\"[22m
[2m              style={[22m
[2m                Array [[22m
[2m                  Object {[22m
[2m                    \\"color\\": \\"white\\",[22m
[2m                    \\"fontSize\\": 18,[22m
[2m                  },[22m
[2m                  Array [[22m
[2m                    Object {[22m
[2m                      \\"marginRight\\": 10,[22m
[2m                    },[22m
[2m                    undefined,[22m
[2m                  ],[22m
[2m                  Object {[22m
[2m                    \\"fontFamily\\": \\"Material Icons\\",[22m
[2m                    \\"fontStyle\\": \\"normal\\",[22m
[2m                    \\"fontWeight\\": \\"normal\\",[22m
[2m                  },[22m
[2m                ][22m
[2m              }[22m
[2m            >[22m
[2m              [22m
[2m            </Text>[22m
[2m            <Text[22m
[2m              accessible={true}[22m
[2m              allowFontScaling={true}[22m
[2m              ellipsizeMode=\\"tail\\"[22m
[2m              style={[22m
[2m                Array [[22m
[2m                  Object {},[22m
[2m                  undefined,[22m
[2m                  undefined,[22m
[2m                  undefined,[22m
[2m                  undefined,[22m
[2m                  undefined,[22m
[2m                  undefined,[22m
[2m                  undefined,[22m
[2m                  undefined,[22m
[2m                  undefined,[22m
[2m                  Array [[22m
[2m                    Object {[22m
[2m                      \\"color\\": \\"white\\",[22m
[2m                      \\"fontSize\\": 20,[22m
[2m                    },[22m
[2m                    undefined,[22m
[2m                    Object {[22m
[2m                      \\"fontSize\\": 17.5,[22m
[2m                    },[22m
[2m                    undefined,[22m
[2m                    undefined,[22m
[2m                    undefined,[22m
[2m                    undefined,[22m
[2m                  ],[22m
[2m                ][22m
[2m              }[22m
[2m            >[22m
[2m              GET STARTED[22m
[2m            </Text>[22m
[2m          </View>[22m
[2m        </View>[22m
[2m      </View>[22m
[2m    </View>[22m
[2m  </View>[22m"
`;

exports[`PricingCard with no theme applied OldPricingCard renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "white",
        "borderColor": "#e1e8ee",
        "borderWidth": 1,
        "margin": 15,
        "marginBottom": 15,
        "padding": 15,
        "shadowColor": "rgba(0,0,0, .2)",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.5,
        "shadowRadius": 0.5,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {},
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          Array [
            Object {
              "color": "#9E9E9E",
              "fontSize": 37.5,
              "fontWeight": "800",
              "textAlign": "center",
            },
            Object {
              "color": "#9E9E9E",
            },
            undefined,
          ],
        ]
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {},
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          Array [
            Object {
              "fontSize": 50,
              "fontWeight": "700",
              "marginBottom": 10,
              "marginTop": 10,
              "textAlign": "center",
            },
            undefined,
          ],
        ]
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {},
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          Array [
            Object {
              "color": "#86939e",
              "fontWeight": "600",
              "marginBottom": 5,
              "marginTop": 5,
              "textAlign": "center",
            },
            undefined,
          ],
        ]
      }
    >
      1 User
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {},
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          Array [
            Object {
              "color": "#86939e",
              "fontWeight": "600",
              "marginBottom": 5,
              "marginTop": 5,
              "textAlign": "center",
            },
            undefined,
          ],
        ]
      }
    >
      Basic Support
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {},
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          Array [
            Object {
              "color": "#86939e",
              "fontWeight": "600",
              "marginBottom": 5,
              "marginTop": 5,
              "textAlign": "center",
            },
            undefined,
          ],
        ]
      }
    >
      All Core Features
    </Text>
    <View
      style={
        Array [
          Object {
            "marginLeft": 15,
            "marginRight": 15,
          },
          undefined,
          undefined,
          undefined,
        ]
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            undefined,
          ]
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          pointerEvents="box-only"
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#9E9E9E",
                "flexDirection": "row",
                "justifyContent": "center",
                "padding": 19,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              Object {
                "padding": 12,
              },
              undefined,
              undefined,
              undefined,
              Array [
                Object {
                  "marginBottom": 10,
                  "marginTop": 15,
                },
                undefined,
                Object {
                  "backgroundColor": "#9E9E9E",
                },
              ],
              undefined,
              undefined,
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "white",
                  "fontSize": 18,
                },
                Array [
                  Object {
                    "marginRight": 10,
                  },
                  undefined,
                ],
                Object {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
              ]
            }
          >
            
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {},
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                Array [
                  Object {
                    "color": "white",
                    "fontSize": 20,
                  },
                  undefined,
                  Object {
                    "fontSize": 17.5,
                  },
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                ],
              ]
            }
          >
            GET STARTED
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`PricingCard with no theme applied PricingCard renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "white",
        "borderColor": "#e1e8ee",
        "borderWidth": 1,
        "margin": 15,
        "marginBottom": 15,
        "padding": 15,
        "shadowColor": "rgba(0,0,0, .2)",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.5,
        "shadowRadius": 0.5,
      },
      undefined,
    ]
  }
  textStyle={undefined}
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {},
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          Array [
            Object {
              "color": "#9E9E9E",
              "fontSize": 37.5,
              "fontWeight": "800",
              "textAlign": "center",
            },
            Object {
              "color": "#9E9E9E",
            },
            undefined,
          ],
        ]
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {},
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          Array [
            Object {
              "fontSize": 50,
              "fontWeight": "700",
              "marginBottom": 10,
              "marginTop": 10,
              "textAlign": "center",
            },
            undefined,
          ],
        ]
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {},
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          Array [
            Object {
              "color": "#86939e",
              "fontWeight": "600",
              "marginBottom": 5,
              "marginTop": 5,
              "textAlign": "center",
            },
            undefined,
          ],
        ]
      }
    >
      1 User
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {},
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          Array [
            Object {
              "color": "#86939e",
              "fontWeight": "600",
              "marginBottom": 5,
              "marginTop": 5,
              "textAlign": "center",
            },
            undefined,
          ],
        ]
      }
    >
      Basic Support
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {},
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          Array [
            Object {
              "color": "#86939e",
              "fontWeight": "600",
              "marginBottom": 5,
              "marginTop": 5,
              "textAlign": "center",
            },
            undefined,
          ],
        ]
      }
    >
      All Core Features
    </Text>
    <View
      style={
        Array [
          Object {
            "marginLeft": 15,
            "marginRight": 15,
          },
          undefined,
          undefined,
          undefined,
        ]
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            undefined,
          ]
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          pointerEvents="box-only"
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#9E9E9E",
                "flexDirection": "row",
                "justifyContent": "center",
                "padding": 19,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              Object {
                "padding": 12,
              },
              undefined,
              undefined,
              undefined,
              Array [
                Object {
                  "marginBottom": 10,
                  "marginTop": 15,
                },
                undefined,
                Object {
                  "backgroundColor": "#9E9E9E",
                },
              ],
              undefined,
              undefined,
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "white",
                  "fontSize": 18,
                },
                Array [
                  Object {
                    "marginRight": 10,
                  },
                  undefined,
                ],
                Object {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
              ]
            }
          >
            
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {},
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                Array [
                  Object {
                    "color": "white",
                    "fontSize": 20,
                  },
                  undefined,
                  Object {
                    "fontSize": 17.5,
                  },
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                ],
              ]
            }
          >
            GET STARTED
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
